centrer le texte et redimensionnement image

--- a/css/formation.css
+++ b/css/formation.css
@@ -17,7 +17,20 @@ nav ul{
     margin-left: 20px;
     text-align: center;
 } 
+#imgBan{
+    filter: saturate(0);
+    width: 100%;
+    height: 800Px;
+}
+.title-age{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: bold;
 
+}
 .bar{
     margin-top:70px;
     width: 20px; 
