--- a/css/formation.css
+++ b/css/formation.css
@@ -1,6 +1,6 @@
 /* la barre rouge */
 *{
-    font-family: 'nunito sans';
+    font-family: 'nunito sans sans serif';
 }
 
 nav{
@@ -32,8 +32,8 @@ nav ul{
 }
 .bar{
     margin-top:70px;
-    width: 20px; 
-    height: 50vh; 
+    width: 30px; 
+    height: 70vh; 
     background-color:#CE0033; 
     position: absolute;
 } 
@@ -81,7 +81,7 @@ nav ul{
     box-shadow: 0px 0px 0.25rem rgba(0, 0, 0, 0.25);
 }
 hr{
-    color: #CE0033;
+    color: #000000;
     margin-top: 2px;
 }
 h2{
@@ -90,5 +90,81 @@ h2{
 .icons{
     border-radius: 20px;
     background-color: white;
+    height: 30px;
+    margin-left: -30px;
+    position: absolute;
+    border: 1px solid #CE0033;
     
+}
+.icon{
+    background-color:#CE0033 ;
+    border-radius: 20px;
+    border: white;
+    border: 1px solid white;
+    position: absolute;
+    margin-left: -30px;
+    height: 30px;
+}
+
+h6{
+    font-weight: bold;
+}
+.image{
+    background-image: url(../images/footer.png);
+}
+.barre{
+    width: 100px;
+}
+.decouverte{
+    color: #fff;
+    background-color: #CE0033 ;
+    border-color: #CE0033 ;
+    position: absolute;
+    top: 60px;
+}
+
+.initiation{
+    color: #fff;
+    background-color: #CE0033 ;
+    border-color: #CE0033 ;
+    position: absolute;
+    top: 230px;
+}
+.metier{
+    color: #fff;
+    background-color: #CE0033 ;
+    border-color: #CE0033 ;
+    position: absolute;
+    top: 400px;
+}
+.femmes{
+    color: #fff;
+    background-color: #CE0033 ;
+    border-color: #CE0033 ;
+    position: absolute;
+    top: 40px;
+}
+.kids{
+    color: #fff;
+    background-color: #CE0033 ;
+    border-color: #CE0033 ;
+    position: absolute;
+    top: 170px;
+}
+.psh{
+    color: #fff;
+    background-color: #CE0033 ;
+    border-color: #CE0033 ;
+    position: absolute;
+    top: 300px;
+}
+.refugies{
+    color: #fff;
+    background-color: #CE0033 ;
+    border-color: #CE0033 ;
+    position: absolute;
+    top: 430px;
+}
+.d-flex{
+    display: flex !important;   
 }
