--- a/css/formation.css
+++ b/css/formation.css
@@ -121,6 +121,8 @@ h6{
     border-color: #CE0033 ;
     position: absolute;
     top: 60px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 
 .initiation{
@@ -129,6 +131,8 @@ h6{
     border-color: #CE0033 ;
     position: absolute;
     top: 230px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 .metier{
     color: #fff;
@@ -136,35 +140,54 @@ h6{
     border-color: #CE0033 ;
     position: absolute;
     top: 400px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 .femmes{
     color: #fff;
     background-color: #CE0033 ;
     border-color: #CE0033 ;
     position: absolute;
-    top: 40px;
+    top: 20px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 .kids{
     color: #fff;
     background-color: #CE0033 ;
     border-color: #CE0033 ;
     position: absolute;
-    top: 170px;
+    top: 150px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 .psh{
     color: #fff;
     background-color: #CE0033 ;
     border-color: #CE0033 ;
     position: absolute;
-    top: 300px;
+    top: 280px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 .refugies{
     color: #fff;
     background-color: #CE0033 ;
     border-color: #CE0033 ;
     position: absolute;
-    top: 430px;
+    top: 410px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    
 }
 .d-flex{
     display: flex !important;   
+}
+.rectangle span{
+    position: relative;
+    left: 50px;
+}
+.rectangle h5{
+    width: 210px;
+    height: 40px;
 }
